--- a/ambientimpact_paragraphs.info.yml
+++ b/ambientimpact_paragraphs.info.yml
@@ -2,7 +2,7 @@ name: Ambient.Impact - Paragraphs
 type: module
 description: Paragraph types and related code.
 package: Ambient.Impact
-core_version_requirement: ^9
+core_version_requirement: ^9.5 || ^10.0
 
 dependencies:
   - drupal:media
