--- a/ambientimpact_paragraphs.services.yml
+++ b/ambientimpact_paragraphs.services.yml
@@ -1,6 +1,6 @@
 services:
 
   ambientimpact_paragraphs.entity_type_build_event_subscriber:
-    class: \Drupal\ambientimpact_paragraphs\EventSubscriber\EntityType\EntityTypeBuildEventSubscriber
+    class: \Drupal\ambientimpact_paragraphs\EventSubscriber\Entity\EntityTypeBuildEventSubscriber
     tags:
       - { name: 'event_subscriber' }
